<resources>

    <string name="app_name">BlunoBasicDemo</string>

    <!-- BLE -->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="action_settings">Action settings</string>

    <!-- Connection State Enum items -->
    <string name="state_connected">Connected</string>
    <string name="state_connecting">Connecting</string>
    <string name="state_scan">Scan</string>
    <string name="state_scanning">Scanning</string>
    <string name="state_disconnecting">isDisconnecting</string>
    <string name="state_error">Error</string>
    <string name="scan">Scan</string>

    <!-- layout -->
    <string name="send_data">Send Data:</string>
    <string name="send_data_button">Send Data</string>
    <string name="data_sending_area">Data sending Area</string>
    <string name="received_data">Received Data:</string>
</resources>
